# OpenSchedule

./: .gitignore  CMakeLists.txt  README.md  demo.c  main.c  utils.c  utils.h
partie1/: list.c  list.h  test.c  test.h
partie2/: search.c  search.h
partie2/results/: log1000.txt  log10000.txt  log100000.txt  log1000000.txt  partie2.xlsx
partie3/: agenda.c  agenda.h  complexity.c  complexity.h  menu.c  menu.h  noms.txt  prenoms.csv
partie3/results/: partie3.xlsx
partie3/results/insertion/: log1000.txt  log10000.txt  log2000.txt  log3000.txt  log4000.txt  log5000.txt  log6000.txt  log7000.txt  log8000.txt  log9000.txt
partie3/results/recherche/: log1000.txt  log10000.txt  log2000.txt  log3000.txt  log4000.txt  log5000.txt  log6000.txt  log7000.txt  log8000.txt  log9000.txt
